--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ftfDesignco-new",
+  "name": "@ftf-designco/ftf-designco-new",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
